# trakr_sdk

./: .gitignore  LICENSE  README.md
cpp/: README.md
cpp/trakr_cpp_sdk/: BINDINGS.md  CMakeLists.txt  README.md
cpp/trakr_cpp_sdk/cmake/: trakr_cpp_sdk-config.cmake
cpp/trakr_cpp_sdk/examples/: basic.cpp  keyboard.cpp  lowlevel.cpp  qwerty_control.cpp
cpp/trakr_cpp_sdk/include/: robot.h
cpp/trakr_cpp_sdk/include/trakr_cpp_sdk/: allied_data_types.h  comm_config.h  comm_data_types.h  motion_configs.h  motion_types.h  network_interface.h  quad_config.h  safety_config.h  safety_constants.h  sequence_types.h  trakr_sdk.h
cpp/trakr_cpp_sdk/src/: bindings.cpp  robot.cpp
docs/: DataTypes.md  Modes.md  Safety.md
examples/python/: basic.py  keyboard.py  lowlevel.py
python/: .gitignore  README.md  pyproject.toml  setup.py
python/trakr_sdk/: __init__.py  config_types.py  data_types.py  motion_configs.py  robot.py  safety_configs.py
python/trakr_sdk/lib/: README.md
trakr_ros2/: CMakeLists.txt  README.md  package.xml
trakr_ros2/include/trakr_ros2/: trakr_node.h
trakr_ros2/src/: trakr_node.cpp
